--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -6,9 +6,13 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
+    
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
